# Bioinfo-Data

./: .gitignore  GDC_Lung_Cancer_Dataset_Scout_Demo.pptx  LICENSE  README.md  README_improved.md  pyproject.toml
GDC_Lung_Cancer_Dataset_Scout/: README.md
GDC_Lung_Cancer_Dataset_Scout/configs/: task_spec.yaml
GDC_Lung_Cancer_Dataset_Scout/docs/: PPT_一頁式內容.md
GDC_Lung_Cancer_Dataset_Scout/gdc_scout/: __init__.py  cli.py  core.py
GDC_Lung_Cancer_Dataset_Scout/tests/: test_core.py  test_evaluation.py
gdc_scout/: client.py  config.py  evaluation.py
tests/: test_config.py
