[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdc-lung-scout"
version = "0.2.1"
description = "Evidence-first GDC metadata scout for stage-survival study planning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GDC Scout contributors"}]
dependencies = []

[project.scripts]
gdc-scout = "gdc_scout.cli:main"

[tool.setuptools.packages.find]
include = ["gdc_scout*"]

